--- a/Project/style.css
+++ b/Project/style.css
@@ -59,10 +59,8 @@ table {
 /*Головна страниця*/
 
 .tbody {
-    background: #b7cedc;
-    max-width: 920px;
-    margin: 0 auto;
-
+    margin-left: 250px;
+    margin-right: 250px;
 }
 
 .divBorder {
@@ -70,31 +68,16 @@ table {
     border: 1px solid black;
 }
 
-h4 {
-    text-align: center;
-}
-
 .header {
     border-radius: 10px 0 0 0;
-    margin-top: 20px;
-    background-color: #d6ff00;
-    line-height: 75px;
-    margin-bottom: 2px;
-    display: flex;
-    justify-content: space-between;
-    width: 71%;
-
+    line-height: 40px;
+    margin-bottom: 75px;
 }
 
 .contacts {
-    width: 20%;
-    background: darkgrey;
     float: right;
     min-height: 60px;
-    line-height: 28.5px;
-    margin-left: 10px;
     border-radius: 0 10px 0 0;
-    justify-content: space-between;
 
 }
 
@@ -103,6 +86,7 @@ h4 {
 }
 
 .footer {
+    margin-top: 15px;
     font-weight: bold;
     color: #fff;
     background: #505050;
@@ -122,42 +106,28 @@ h4 {
 
 .first {
     height: 770px;
-    background: #b7cedc;
     flex-grow: 3;
-    width: 30%;
-
 }
 
 .second {
-    background: #b7cedc;
-    height: 770px;
     flex-grow: 7;
-    width: 70%;
+    width: 50%;
 }
 
 .third {
     height: 770px;
-    background: #b7cedc;
     flex-grow: 3;
     margin-left: 10px;
-    width: 30%;
-}
-
-.menu {
-    margin-top: 30%;
-    background: #b7cedc;
-    height: 35%;
 }
 
 .devs {
-    margin-top: 30%;
-    background: rgba(255, 165, 165, 0.56);
-    height: 35%;
+    margin-top: 70%;
+    height: 300px;
 }
 
 .category-wrap {
-    width: 200px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    width: 80px;
+    font-family: "Helvetica Neue", Comic Sans MS, Comic Sans, cursive;
 }
 .category-wrap h3 {
     font-size: 16px;
@@ -173,19 +143,62 @@ h4 {
     padding: 0;
     border-top: 1px solid rgba(0,0,0,.3);
 }
-.category-wrap li {margin: 12px 0 0 0px;}
+.category-wrap li {margin: 12px 0 0 0;}
 
 .category-wrap a {
     text-decoration: none;
     display: block;
-    font-size: 13px;
+    font-size: 15px;
     color: rgba(0,0,0,.6);
     padding: 5px;
     position: relative;
     transition: .3s linear;
+    border-radius: 10px 10px 10px 10px;
 }
 
 .category-wrap a:hover {
-    background: #80C8A0;
-    color: white;
+    background: black;
+    color: #b0aeae;
 }
+
+.text {
+    font-family: "Comic Sans MS", Comic Sans, cursive;
+}
+
+.shrift {
+    color: black;
+    font-family: "Comic Sans MS", Comic Sans, cursive;
+    text-decoration: white;
+}
+
+.cw {
+    width: 192px;
+    font-family: "Comic Sans MS", Comic Sans, cursive;
+}
+.cw ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    border-top: 1px solid rgba(0,0,0,.3);
+}
+
+.cw li {margin: 0 0 0 0;}
+
+.cw a {
+    text-decoration: none;
+    display: block;
+    font-size: 14px;
+    color: rgba(0,0,0,.6);
+    padding: 3px;
+    text-align: center;
+    position: absolute;
+    transition: .3s linear;
+    border-radius: 10px 10px 10px 10px;
+
+}
+.cw a:hover {
+    background: black;
+    color: #b0aeae;
+}
+
+
