--- a/Project/style.css
+++ b/Project/style.css
@@ -62,7 +62,6 @@ table {
     margin-left: 250px;
     margin-right: 250px;
     overflow: auto
-
 }
 
 .divBorder {
@@ -81,6 +80,7 @@ table {
     display: block;
     float: right;
 }
+
 
 .shadow {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.66);
@@ -107,17 +107,15 @@ table {
 .content {
     text-align: center;
     flex-grow: 7;
-    width: 50%;
+    box-sizing: border-box;
 }
 
 .ads {
-    text-align: right;
-    height: 770px;
-    flex-grow: 3;
     margin-left: 10px;
 }
 
 .counter {
+    display: inline-block;
     margin-top: 100%;
     height: 150px;
 }
@@ -207,5 +205,7 @@ table {
     background: black;
     color: #b0aeae;
 }
+
+
 
 
