--- a/Project/style.css
+++ b/Project/style.css
@@ -64,9 +64,10 @@ table {
 /*Головна страниця*/
 
 .tbody {
-    margin-left: 250px;
-    margin-right: 250px;
-    overflow: auto
+    width: 1240px;
+    height: 720px;
+    margin: auto; /* this will center the element */
+    position: relative;
 }
 
 .divBorder {
@@ -79,16 +80,6 @@ table {
     border-radius: 10px 0 0 0;
     line-height: 40px;
     margin-bottom: 75px;
-}
-
-.contacts {
-    display: block;
-    float: right;
-}
-
-
-.shadow {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.66);
 }
 
 .footer {
@@ -117,12 +108,6 @@ table {
 
 .ads {
     margin-left: 10px;
-}
-
-.counter {
-    display: inline-block;
-    margin-top: 100%;
-    height: 150px;
 }
 
 .category-wrap {
@@ -174,10 +159,6 @@ table {
     color: black;
     font-family: "Comic Sans MS", Comic Sans, cursive;
     text-decoration: white;
-}
-
-.fontName {
-    flex-grow: 3;
 }
 
 .asd {
@@ -278,10 +259,26 @@ table {
 }
 
 .card {
-    margin-top: 20px;
-    padding: 10px;
+    margin-top: 10px;
     text-align: center;
-    background-color: rgba(0, 0, 0, .3);
-    color: black;
+    position: relative;
+    flex-direction: column;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, .225);
+    border-radius: .35rem;
 }
 
+.first {
+    position: relative;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cont {
+    position: relative;
+    justify-content: space-between;
+    text-align: center;
+    margin-top: 17px;
+}
