--- a/Project/style.css
+++ b/Project/style.css
@@ -64,6 +64,7 @@ table {
 .z {
 
 }
+
 /*Головна страниця*/
 
 .tbody {
@@ -280,6 +281,14 @@ table {
     margin-top: 17px;
 }
 
-.toCountry{
+.toCountry {
     margin-top: 35px;
 }
+
+.toInput {
+    width: 100%;
+    margin-right: -30px;
+    margin-bottom: 15px;
+}
+
+
